--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
       ]
     },
     "ios": {
-      "supportsTablet": false
+      "supportsTablet": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
