--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
+    "fbemitter": "^3.0.0",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
