--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
     "expo": "~53.0.13",
+    "expo-av": "~15.1.7",
     "expo-dev-client": "~5.2.2",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
