--- a/eas.json
+++ b/eas.json
@@ -1,11 +1,14 @@
 {
-  "cli": {
-    "appVersionSource": "local"
-  },
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      },
+      "ios": {
+        "simulator": true
+      }
     }
   }
 }
