--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.10.0",
     "expo": "~53.0.13",
     "expo-av": "~15.1.7",
+    "expo-background-fetch": "~13.1.6",
     "expo-dev-client": "~5.2.2",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
