for production less size

--- a/eas.json
+++ b/eas.json
@@ -9,6 +9,16 @@
       "ios": {
         "simulator": true
       }
+    },
+    "production": {
+      "developmentClient": false,
+      "distribution": "store",
+      "android": {
+        "buildType": "apk" 
+      },
+      "ios": {
+        "simulator": false
+      }
     }
   }
 }
