--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-av": "~15.1.7",
     "expo-background-fetch": "~13.1.6",
     "expo-dev-client": "~5.2.2",
+    "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
