--- a/eas.json
+++ b/eas.json
@@ -1,23 +1,58 @@
 {
+  "cli": {
+    "version": ">= 3.22.0"
+  },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "env": {
+          "EXPO_PUBLIC_API_URL": "http://134.199.178.17"
+        }
       },
       "ios": {
-        "simulator": true
+        "env": {
+          "EXPO_PUBLIC_API_URL": "http://134.199.178.17"
+        }
+      }
+    },
+    "staging": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+        "env": {
+          "EXPO_PUBLIC_API_URL": "http://134.199.178.17"
+        }
+      },
+      "ios": {
+        "env": {
+          "EXPO_PUBLIC_API_URL": "http://134.199.178.17"
+        }
       }
     },
     "production": {
-      "developmentClient": false,
       "distribution": "store",
       "android": {
-        "buildType": "apk" 
+        "env": {
+          "EXPO_PUBLIC_API_URL": "http://134.199.178.17"
+        }
       },
       "ios": {
-        "simulator": false
+        "env": {
+          "EXPO_PUBLIC_API_URL": "http://134.199.178.17"
+        }
+      }
+    }
+  },
+  "submit": {
+    "production": {
+      "android": {
+        "track": "production"
+      },
+      "ios": {
+        "appleId": "your-apple-id@example.com",
+        "ascAppId": "your-app-store-connect-id"
       }
     }
   }
