before work on ios

--- a/eas.json
+++ b/eas.json
@@ -1,57 +1,57 @@
 {
   "cli": {
-    "version": ">= 3.22.0",
-    "appVersionSource": "remote", "version": ">=16.0.0",
+    "version": ">=16.0.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal",
       "android": {
-        "env": {
-          "EXPO_PUBLIC_API_URL": "https://134.199.178.17"
-        }
+        "env": { "EXPO_PUBLIC_API_URL": "https://134.199.178.17" }
       },
       "ios": {
-        "env": {
-          "EXPO_PUBLIC_API_URL": "https://134.199.178.17"
-        }
+        "env": { "EXPO_PUBLIC_API_URL": "https://134.199.178.17" }
       }
     },
     "staging": {
       "developmentClient": true,
       "distribution": "internal",
       "android": {
-        "env": {
-          "EXPO_PUBLIC_API_URL": "https://134.199.178.17"
-        }
+        "env": { "EXPO_PUBLIC_API_URL": "https://134.199.178.17" }
       },
       "ios": {
-        "env": {
-          "EXPO_PUBLIC_API_URL": "https://134.199.178.17"
-        }
+        "env": { "EXPO_PUBLIC_API_URL": "https://134.199.178.17" }
       }
     },
+
+    /* Store builds */
     "production": {
       "distribution": "store",
       "android": {
-        "env": {
-          "EXPO_PUBLIC_API_URL": "https://134.199.178.17"
-        },
-       "buildType": "apk"
+        "buildType": "app-bundle",
+        "env": { "EXPO_PUBLIC_API_URL": "https://134.199.178.17" }
       },
       "ios": {
-        "env": {
-          "EXPO_PUBLIC_API_URL": "https://134.199.178.17"
-        }
+        "env": { "EXPO_PUBLIC_API_URL": "https://134.199.178.17" }
+      }
+    },
+
+    /* Sideloadable Android APK (signed release) */
+    "production-apk": {
+      "distribution": "store",
+      "android": {
+        "buildType": "apk",
+        "env": { "EXPO_PUBLIC_API_URL": "https://134.199.178.17" }
+      },
+      "ios": {
+        "env": { "EXPO_PUBLIC_API_URL": "https://134.199.178.17" }
       }
     }
   },
   "submit": {
     "production": {
-      "android": {
-        "track": "production"
-      },
+      "android": { "track": "production" },
       "ios": {
         "appleId": "your-apple-id@example.com",
         "ascAppId": "your-app-store-connect-id"
