--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.17",
@@ -22,9 +22,12 @@
     "expo": "~53.0.13",
     "expo-av": "~15.1.7",
     "expo-background-fetch": "~13.1.6",
+    "expo-build-properties": "~0.14.8",
+    "expo-file-system": "~18.1.11",
     "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
     "react": "19.0.0",
@@ -33,16 +36,13 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "expo-build-properties": "~0.14.8",
-    "expo-file-system": "~18.1.11",
-    "expo-sharing": "~13.1.5"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "~19.0.10",
     "expo-dev-client": "~5.2.2",
-    "typescript": "~5.8.3",
-    "@types/react": "~19.0.10"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
