--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-task-manager": "~13.1.6",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
